Implemented external py module
What:

Why:

How:

Tags:

--- a/data/config/config.json
+++ b/data/config/config.json
@@ -1,5 +1,8 @@
 {
     "app": {
-        "name": "MyApp"
+        "name": "MyApp",
+        "module": "my_module",
+        "path": "src/",
+        "class": "MyClass"
     }
 }
